build: update Maven configuration to Java 21
- Set Java version to 21
- Update JavaFX to version 21
- Update all Maven plugins to latest versions
- Replace db4o dependency with MapDB 3.1.0
- Update Lombok to 1.18.40
- Add module-info.java support